bugzID: 12007 fix build.xml file to use verify:none option