@@ -8,7 +8,7 @@
     <property name="lib" value="${basedir}/lib/Java"/>
     <property name="web.lib" value="${web-inf.dir}/lib"/>
     <property name="validateData" value="${basedir}/server_apps/DB_maintenance"/>
-    <property name="jvm.args" value="-XX:-UseSplitVerifier"/>
+    <property name="jvm.args" value="-Xverify:none"/>
 
     <property environment="env"/>
 
